[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "limberframework"
version = "0.1.1"
description = "The core of the Limber Framework, a python web application framework built using FastAPI."
license = "MIT"
authors = ["Jonathan Staniforth <jonathanstaniforth@gmail.com>"]
maintainers = []
readme = "README.md"
repository = "https://github.com/limber-project/limberframework"
documentation = "https://github.com/limber-project/limberframework/wiki"
keywords = ["python", "fastapi"]

[tool.poetry.dependencies]
python = "~3.8"
sqlalchemy = "1.3.18"
fastapi = "0.59.0"
pydantic = "1.6.1"
psycopg2 = "2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pylint = "2.5.3"
coverage = "5.2.1"
pytest-asyncio = "0.14.0"
