[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "limberframework"
version = "0.2.0"
description = "The core of the Limber Framework, a python web application framework built using FastAPI."
license = "MIT"
authors = ["Jonathan Staniforth <jonathanstaniforth@gmail.com>"]
maintainers = []
readme = "README.md"
repository = "https://github.com/limber-project/limberframework"
documentation = "https://github.com/limber-project/limberframework/wiki"
keywords = ["python", "fastapi"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.9.0"
sqlalchemy = "1.3.18"
fastapi = "0.59.0"
pydantic = "1.6.1"
psycopg2 = "2.8.5"
redis = "3.5.3"
pymemcache = "3.2.0"
aioredis = "^1.3.1"
aioredlock = "^0.5.2"
mysqlclient = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pylint = "2.5.3"
coverage = "5.2.1"
pytest-asyncio = "0.14.0"
pre-commit = "2.7.1"
tox = "^3.20.1"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
